# nixpkgsupd

./: Cargo.toml  README.md  clippy.toml  flake.nix  todo
src/: flake_nix.rs  flake_ref.rs  json_helpers.rs  lockfile.rs  main.rs  registry.rs  serde_int_tag_hack.rs  sigint_guard.rs  update.rs
