[package]
name = "nixpkgsupd"
version = "0.2.0"
authors = ["Axel Karjalainen <axel@axka.fi>"]
edition = "2024"
description = "Nix garbage collector root flake updater"
readme = "README.md"
repository = "https://github.com/axelkar/nixpkgsupd"
license = "MIT OR Apache-2.0"

# Nixpkgs 25.05
rust-version = "1.86.0"

[dependencies]
chrono-humanize = "0.2.3"
clap = "4.5.23"
color-eyre = { version = "0.6.3", default-features = false, features = ["track-caller"] }
diff = "0.1.13"
fs-err = { version = "3.0.0", features = ["expose_original_error"] }
humantime = "2.2.0"
iddqd = "0.3.9"
nix = { version = "0.30.1", features = ["signal"] }
nix-editor = "0.3.0"
owo-colors = "4.1.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
strum = { version = "0.27.2", features = ["derive"] }

[lints.clippy]
nursery = "warn"
pedantic = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
should_panic_without_expect = "warn"
str_to_string = "warn"
string_to_string = "warn"
